# amberfork

./: .gitignore  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md
.claude/: session-context.sh  settings.json
.github/workflows/: ci.yml  release.yml  ui.yml
bench/: params.toml
bench/fixtures/chimera_noise_seed42_dev/: README.md  a_03.json  a_06.json  a_09.json  a_10.json  a_14.json  a_15.json  a_16.json  a_18.json  b_03.json  b_18.json  pair_03.json  pair_06.json  pair_09.json  pair_10.json  pair_14.json  pair_15.json  pair_16.json  pair_18.json
bench/fixtures/chimera_noise_seed43_dev/: README.md  a_02.json  a_07.json  a_08.json  a_13.json  a_14.json  a_15.json  a_18.json  b_02.json  b_07.json  b_14.json  b_15.json  b_18.json  pair_02.json  pair_07.json  pair_08.json  pair_13.json  pair_14.json  pair_15.json  pair_18.json
bench/fixtures/chimera_noise_seed44_dev/: README.md  a_01.json  a_02.json  a_04.json  a_05.json  a_07.json  a_10.json  a_15.json  a_16.json  a_17.json  a_19.json  b_04.json  b_07.json  b_16.json  b_17.json  b_19.json  pair_01.json  pair_02.json  pair_04.json  pair_05.json  pair_07.json  pair_10.json  pair_15.json  (+3 more)
bench/results/: chimera_noise_multiseed_test.json  chimera_noise_multiseed_test_v0.4.0.json  chimera_noise_multiseed_test_v0.5.0.json  chimera_noise_seed42_dev.json  chimera_noise_seed42_test.json  chimera_noise_seed42_test_v0.5.0.json  chimera_noise_seed43_test.json  chimera_noise_seed43_test_v0.5.0.json  chimera_noise_seed44_test.json  chimera_noise_seed44_test_v0.4.0.json  mode_a_prime_realpairs_all.json
crates/adiff-ingest/: Cargo.toml
crates/adiff-ingest/src/: lib.rs  whowhen.rs
crates/adiff-ingest/tests/: load.rs  whowhen.rs
crates/adiff-model/: Cargo.toml
crates/amberfork/: Cargo.toml  README.md
crates/amberfork-align/: Cargo.toml
crates/amberfork-align/benches/: align_scale.rs
crates/amberfork-align/src/: attribution.rs  cost.rs  diff.rs  field_diff.rs  fork.rs  lib.rs  nw.rs  params.rs
crates/amberfork-align/tests/: chimera_parity.rs  self_align.rs  smoke_fixture.rs
crates/amberfork-attrib/: Cargo.toml
crates/amberfork-attrib/src/: cause.rs  ddmin.rs  driver.rs  lib.rs  oracle.rs  patch.rs  testkit.rs  verify.rs
crates/amberfork-bench/: Cargo.toml
crates/amberfork-bench/src/: aggregate.rs  arms.rs  build.rs  calibration.rs  fetch.rs  hash.rs  main.rs  pairs.rs  params.rs  pyjson.rs  results.rs  sanitize.rs  score.rs  split.rs
crates/amberfork-bench/tests/: bench_cli.rs  build_cli.rs  sanitize_cli.rs
crates/amberfork-bench/tests/fixtures/chimera_synthetic/: a_00_splice4.json  a_01_retry_splice5.json  a_02_reworded.json  b_restock.json  pair_00.json  pair_01.json  pair_02.json
crates/amberfork-bench/tests/fixtures/exclusion_zoo/: empty_fail.json  good_fail.json  good_ref.json  pair_00.json  pair_01.json  pair_02.json  pair_03.json  pair_04.json
crates/amberfork-bench/tests/fixtures/mode_a_prime_synthetic/: a_00_capt_expense.json  a_01_capt_tz.json  b_00_smol_expense.json  b_01_smol_tz.json  pair_00.json  pair_01.json
crates/amberfork-bench/tests/snapshots/: bench_cli__report_committed_dev.snap  bench_cli__report_committed_mode_a_prime.snap  bench_cli__report_committed_multiseed_test.snap  bench_cli__report_committed_test_seed42.snap  bench_cli__report_committed_test_seed43.snap  bench_cli__report_committed_test_seed44.snap
crates/amberfork-cli/: Cargo.toml
crates/amberfork-cli/assets/demo/: good.json  pair_demo.json
crates/amberfork-cli/src/: main.rs  render.rs
crates/amberfork-cli/tests/: demo_cli.rs  diff_cli.rs  render_cli.rs
crates/amberfork-cli/tests/snapshots/: demo_cli__demo_no_color.snap  render_cli__smoke_pair_no_color.snap
crates/amberfork-ingest/: Cargo.toml
crates/amberfork-ingest/src/: lib.rs  tape.rs  whowhen.rs
crates/amberfork-ingest/tests/: load.rs  tape.rs  whowhen.rs
crates/amberfork-layout/: Cargo.toml
crates/amberfork-layout/src/: lib.rs
crates/amberfork-model/: Cargo.toml
crates/amberfork-model/src/: diff.rs  lib.rs  test_support.rs
crates/amberfork-model/tests/: diff_result.rs  roundtrip.rs
crates/amberfork-record/: Cargo.toml
crates/amberfork-record/src/: cassette.rs  lib.rs  normalize.rs  proxy.rs
crates/amberfork-record/tests/: capture.rs  normalize.rs
crates/amberfork-record/tests/fixtures/: refund-triage.cassette.json
crates/amberfork-record/tests/snapshots/: normalize__normalized_run_shape_is_stable.snap
crates/amberfork-replay/: Cargo.toml
crates/amberfork-replay/src/: canon.rs  lib.rs  proxy.rs  replay.rs  server.rs  upstream.rs
crates/amberfork-replay/tests/: live_upstream.rs  replay.rs
crates/amberfork-server/: Cargo.toml
crates/amberfork-server/src/: lib.rs
crates/amberfork-server/tests/: serve.rs
crates/amberfork-server/tests/fixture_bundle/: app.js  index.html
crates/amberfork/assets/demo/: bad.json
crates/amberfork/src/: load.rs  main.rs  render.rs  verify.rs
crates/amberfork/src/snapshots/: amberfork__render__tests__converged_absorbed_divergence.snap  amberfork__render__tests__converged_identical.snap  amberfork__render__tests__forked_narrow_width_60.snap  amberfork__render__tests__forked_truecolor.snap
crates/amberfork/tests/: cassette_cli.rs  diff_cli.rs  record_cli.rs  serve_cli.rs  serve_demo_cli.rs  warnings_cli.rs
crates/amberfork/tests/fixtures/cassette/: bad.cassette.json  good.cassette.json  pair.json
crates/amberfork/tests/snapshots/: demo_cli__demo_no_color.snap
docs/: cassette-format.md  notebook.md  run-on-your-own-agent.md  trace-format.md
docs/assets/: .gitignore  build_demo.sh  build_hero.sh  build_hero_web.sh  demo.tape  gen_hero.py  hero-web.html  hero.html  render.mjs
docs/design/: POSITIONING.md  design-run-diff-debugger.md
spike/: README.md  align_spike.py  confidence_check.py  convert_whowhen.py  make_pairs.py  make_realpairs.py  robustness.py  sanitize_gaia.py  test_sanitize.py  test_smoke.py
ui/: Cargo.toml  Trunk.toml  index.html  rust-toolchain.toml
ui/src/: attribution.rs  canvas.rs  content_diff.rs  lib.rs  main.rs
(+9 files in other folders)
