[workspace]
resolver = "3"
members = [
    "crates/amberfork-model",
    "crates/amberfork-ingest",
    "crates/amberfork-align",
    "crates/amberfork-cli",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/Melvin0070/amberfork"
rust-version = "1.85"

# Single source of truth for shared dependency versions. Every crate reads these via
# `serde = { workspace = true }` so the frozen contract never forks its serde version.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proptest = "1"
clap = { version = "4", features = ["derive"] }
assert_cmd = "2"
predicates = "3"
# Internal crates share versions here too, so a path move is a one-line change.
amberfork-model = { path = "crates/amberfork-model" }
amberfork-align = { path = "crates/amberfork-align" }
amberfork-ingest = { path = "crates/amberfork-ingest" }

# Deny-by-default lints applied workspace-wide. CI runs `clippy --all-targets -- -D warnings`;
# keeping the intent here documents that a warning is a stop-the-line event.
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
