[workspace]
resolver = "3"
members = [
    "crates/amberfork-model",
    "crates/amberfork-ingest",
    "crates/amberfork-align",
    "crates/amberfork-layout",
    "crates/amberfork-server",
    "crates/amberfork",
    "crates/amberfork-bench",
]
# The web UI is its own workspace root (design doc D4): it targets wasm32 and builds with
# trunk, so it stays out of the engine workspace and off the wasm-free verify ritual. It
# depends on amberfork-layout by path for the Document contract, nothing more.
exclude = ["ui"]

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Melvin0070/amberfork"
rust-version = "1.85"
keywords = ["agent", "llm", "trace", "diff", "debugging"]

# Single source of truth for shared dependency versions. Every crate reads these via
# `serde = { workspace = true }` so the frozen contract never forks its serde version.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
# `preserve_order` because the GAIA sanitizer's byte-parity contract (issue #17) requires
# key order to survive a parse -> serialize round trip; it swaps `Map` to an insertion-order
# map workspace-wide (typed structs serialize in field order regardless).
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.9"
sha2 = "0.10"
proptest = "1"
clap = { version = "4", features = ["derive"] }
terminal_size = "0.4"
ureq = "3"
assert_cmd = "2"
predicates = "3"
# The serving edge (issue #25). tokio stays quarantined to I/O-edge crates (design doc:
# engine crates are sync + pure); the lib needs only `net` — test/binary runtimes opt into
# `macros`/`rt` at their own dependency site.
axum = "0.8"
mime_guess = "2"
rust-embed = "8"
tokio = { version = "1", features = ["net"] }
webbrowser = "1"
insta = "1"
tempfile = "3"
criterion = "0.8"
# Internal crates share versions here too, so a path move is a one-line change. The
# `version` field is what dependents publish against on crates.io (path is stripped at
# package time) — bump it together with workspace.package.version at every release.
amberfork-model = { path = "crates/amberfork-model", version = "0.5.0" }
amberfork-align = { path = "crates/amberfork-align", version = "0.5.0" }
amberfork-ingest = { path = "crates/amberfork-ingest", version = "0.5.0" }
amberfork-layout = { path = "crates/amberfork-layout", version = "0.5.0" }
amberfork-server = { path = "crates/amberfork-server", version = "0.5.0" }

# Deny-by-default lints applied workspace-wide. CI runs `clippy --all-targets -- -D warnings`;
# keeping the intent here documents that a warning is a stop-the-line event.
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
