[package]
name = "adiff-ingest"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Forgiving loader from plain-JSON trace files into the canonical adiff-model Run."

[lints]
workspace = true

[dependencies]
adiff-model = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
