[package]
name = "amberfork-align"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Move-typed alignment engine: cost model, affine-gap aligner, resync fork rule."

[lints]
workspace = true

[dependencies]
amberfork-model = { workspace = true }
serde_json = { workspace = true }
