[package]
name = "amberfork-align"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Move-typed alignment engine: cost model, affine-gap aligner, resync fork rule."
keywords.workspace = true
categories = ["development-tools::debugging", "algorithms"]

[lints]
workspace = true

[dependencies]
amberfork-model = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
