[package]
name = "amberfork-align"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Move-typed alignment engine: cost model, affine-gap aligner, resync fork rule."
keywords.workspace = true
categories = ["development-tools::debugging", "algorithms"]

[lints]
workspace = true

[dependencies]
amberfork-model = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

# `test = false`: `cargo test` would otherwise execute this binary in the debug profile, where
# the 1000-step size takes minutes. `cargo bench` (release profile) is its only runner; clippy
# still lints it via --all-targets.
[[bench]]
name = "align_scale"
test = false
harness = false
