[package]
name = "amberfork-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Offline benchmark harness: the pre-registered chimera protocol (BENCHMARK.md), arms scored on identical fixtures."

[[bin]]
name = "amberfork-bench"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
amberfork-align = { workspace = true }
amberfork-ingest = { workspace = true }
amberfork-model = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
# Integration tests link dev-dependencies only; sha2 appears twice so bench_cli.rs can
# recompute the committed file's hash instead of hardcoding it (a changelog edit must not
# break the test).
sha2 = { workspace = true }
