[package]
name = "amberfork-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Offline benchmark harness: the pre-registered chimera protocol (BENCHMARK.md), arms scored on identical fixtures."
# Never published: the harness only means something next to the committed fixtures,
# results documents, and BENCHMARK.md protocol — none of which belong in a crate.
publish = false

[[bin]]
name = "amberfork-bench"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
amberfork-align = { workspace = true }
amberfork-ingest = { workspace = true }
amberfork-model = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
# The one networked seam in the workspace: `fetch` pulls raw upstream bench data. Blocking
# client on purpose — the tokio quarantine (CLAUDE.md) keeps async out of engine/harness code.
ureq = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
insta = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
# Integration tests link dev-dependencies only; sha2 appears twice so bench_cli.rs can
# recompute the committed file's hash instead of hardcoding it (a changelog edit must not
# break the test).
sha2 = { workspace = true }
