[package]
name = "amberfork-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Forgiving loader from plain-JSON trace files into the canonical amberfork-model Run."

[lints]
workspace = true

[dependencies]
amberfork-model = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
