[package]
name = "amberfork-model"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Canonical Run/Step trajectory model and DiffResult schema for amberfork (the frozen contract every crate reads)."
keywords.workspace = true
categories = ["development-tools::debugging", "data-structures"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[features]
# Step/Run fixture builders shared by every crate's tests (issue #22). Deliberately not a
# default feature: crates enable it from [dev-dependencies] only, so it never ships.
test-support = []
