[package]
name = "amberfork-record"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Record path for amberfork — a local capture proxy that wraps an agent and writes a full-content cassette."
keywords.workspace = true
categories = ["development-tools::debugging"]

[lints]
workspace = true

[dependencies]
# The normalizer produces the canonical model, so the record path finally reaches the shape
# the aligner reads. The capture proxy (tokio) and the normalizer (sync, pure) share this crate
# because they are two halves of one path; only the proxy touches the runtime.
amberfork-model = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
# The proxy test stands up a fake upstream and drives it over real HTTP: the contract under
# test is "what crosses the boundary", so faking at the client seam would test nothing. The
# fake provider is why `axum` needs `tokio`'s macros/rt here.
axum = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
# A normalized cassette must survive the real aligner: the self-align invariant (a run vs
# itself never forks) is the canonical guard, and `insta` pins the produced run's shape.
amberfork-align = { workspace = true }
insta = { workspace = true, features = ["json"] }
