[package]
name = "amberfork-replay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Replay path for amberfork — re-drive a recorded agent run from its cassette, serving recorded responses and relaying live once the run branches off the tape."
keywords.workspace = true
categories = ["development-tools::debugging"]

[lints]
workspace = true

[dependencies]
# The cassette contract lives in the record crate; replay is its consumer — it serves back the
# exact `CapturedRequest`/`CapturedResponse`/`Cassette` types the recorder wrote, so a
# re-executed run is itself a cassette, normalizable by the same `normalize`. This is the only
# structural coupling between the two halves of the record/replay path.
amberfork-record = { workspace = true }
# Tool-call-ID canonicalization walks and rewrites the request body as a `serde_json::Value`
# before the match, so serde_json graduates from a dev-dependency to a real one. `preserve_order`
# is the workspace default; canonical bodies compare by value (object key order is not
# load-bearing), so it does not affect matching.
serde_json = { workspace = true }
# The loopback listener (slice 4) is an I/O edge: the re-driven agent's SDK points at
# `http://127.0.0.1:PORT` (via `--base-url-env`, the mechanism `record` already uses) and this
# crate serves the tape back over real HTTP. `axum` is that listener; `tokio` supplies its runtime
# primitives. Both are quarantined here, never in the engine crates, exactly as in
# `amberfork-record`/`amberfork-server`. Features are declared to what this crate's own code uses:
# `net` (the workspace default) for the `TcpListener`, `rt` for `tokio::spawn`, and `sync` for the
# `tokio::sync::Mutex` guarding the proxy across the live-relay await — rather than leaning on
# `axum`'s feature unification to supply them.
axum = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }

[dev-dependencies]
# The integration test drives the listener with a stub "agent": a `reqwest` client pointed at the
# loopback base URL, exactly as a provider SDK would be — the contract under test is what crosses
# the HTTP boundary, so faking at the client seam would test nothing. `tokio`'s test macros and a
# multi-thread runtime run the async tests (the server task and the client share the runtime).
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
