[package]
# The product crate carries the product name — `cargo install amberfork` — while the
# libraries stay amberfork-* namespaced. The binary target is inferred from src/main.rs
# and inherits this name.
name = "amberfork"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "The amberfork command: diff two agent-run traces and render where they fork."
readme = "README.md"
keywords.workspace = true
categories = ["command-line-utilities", "development-tools::debugging"]

[lints]
workspace = true

[dependencies]
amberfork-align = { workspace = true }
amberfork-ingest = { workspace = true }
amberfork-layout = { workspace = true }
amberfork-model = { workspace = true }
# The record path's normalizer: the CLI sniffs a `cassette_version` and normalizes cassettes
# through the same engine as passive traces. Only the pure normalizer is used here; the capture
# proxy (the crate's tokio/reqwest half) is reached by the future `record` command, not `diff`.
amberfork-record = { workspace = true }
amberfork-server = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
terminal_size = { workspace = true }
# The runtime lives at the ONE async edge (`serve`); engine paths never touch it.
tokio = { workspace = true, features = ["rt"] }
webbrowser = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
# Fixture builders only; the normal dependency above stays featureless so nothing ships.
amberfork-model = { workspace = true, features = ["test-support"] }
